--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,24 @@
         <div class="container-fluid text-center">
             <h1 class="mt-5" ></h1>
             <img id ="img" src="./rigo-baby.jpg"></img>
-            <div class="inputs">
-                <input type="text" id="inputProNoun">
-                <input type="text" id="inputAdjective">
-                <input type="text" id=:inputNoun>
-            </div>
+            
+            <nav class="navbar navbar-light bg-light">
+                <form id="mangos" class="form-inline mx-auto">
+                    <div class="input-group">
+                        <input id="insert1" on type="text" class="form-control" placeholder="First Interest" aria-label="username" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group">
+                        <input id="insert2" type="text" class="form-control" placeholder="second interest" aria-label="username" aria-describedby="basic-addon2">
+                    </div>
+                    <div class="input-group">
+                        <input id="insert3" type="text" class="form-control" placeholder="domain" aria-label="Username" aria-describedby="basic-addon3">
+                    </div>
+                </form>
+            </nav>
+
+
+
+
             <button id="btn" onclick="webNames()">generate</button>
             <!-- <div id="webGen" onclick="webNames()"></div> -->
 
@@ -46,6 +59,10 @@
                     }
                 }
             }
+
+            let firstWord= document.querySelector("#insert1").innerHTML= proNoun[i].value      
+                proNoun.push(firstInterest)
+
         </script>
 
         <!-- do not remove this bundle.js tag -->
