--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <img id ="img" src="./rigo-baby.jpg"></img>
             
             <nav class="navbar navbar-light bg-light">
-                <form id="mangos" class="form-inline mx-auto">
+                <form class="form-inline mx-auto" >
                     <div class="input-group">
                         <input id="insert1" on type="text" class="form-control" placeholder="First Interest" aria-label="username" aria-describedby="basic-addon1">
                     </div>
@@ -28,7 +28,7 @@
 
 
 
-
+<button id="btn" onclick="myBtn()">generate</button>
             <button id="btn" onclick="webNames()">generate</button>
             <!-- <div id="webGen" onclick="webNames()"></div> -->
 
@@ -59,9 +59,17 @@
                     }
                 }
             }
+    
+            let input = document.querySelector("#insert1").value;
+                proNoun.push(input){
+                    input.addEventListener("keyup", function(event) {
+                if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("myBtn").click();
+            }
+                }});
 
-            let firstWord= document.querySelector("#insert1").innerHTML= proNoun[i].value      
-                proNoun.push(firstInterest)
+        <!-- innerHTML= proNoun[i].onkeyup= -->
 
         </script>
 
