--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container-fluid text-center">
             <h1 class="mt-5" ></h1>
-            <img id ="img" src="./rigo-baby.jpg"></img>
+            <img id ="img" src="https://ca.slack-edge.com/T0BFXMWMV-U94H7DYSW-15b9b99d5bb5-512" onclick="webNames()" width="300px" height="300px"></img>
             
             <nav class="navbar navbar-light bg-light">
                 <form class="form-inline mx-auto" >
@@ -30,7 +30,7 @@
 
 
 
-            <button id="btn" onclick="webNames()">generate</button>
+            <!-- <button id="btn" onclick="webNames()">generate</button> -->
             <!-- <div id="webGen" onclick="webNames()"></div> -->
 
 
@@ -65,7 +65,7 @@
                     input.addEventListener("keyup", function(event) {
                 if (event.keyCode === 13) {
                 event.preventDefault();
-                document.getElementById("myBtn").click();
+                document.querySelector("#myBtn").click();
             }
                 });
 
