--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,15 @@
                 <div class="form-inline mx-auto">
 
                     <div class="input-group">
-                        <button id="btn" onclick="myBtn()">add</button>
+                        <button id="btn" onclick="myBtn1()">add</button>
                         <input id="insert1" on type="text" class="form-control" placeholder="First Interest" aria-label="username" aria-describedby="basic-addon1">
                     </div>
                     <div class="input-group">
+                        <button id="btn" onclick="myBtn2()">add</button>
                         <input id="insert2" type="text" class="form-control" placeholder="second interest" aria-label="username" aria-describedby="basic-addon2">
                     </div>
                     <div class="input-group">
+                        <button id="btn" onclick="myBtn3()">add</button>
                         <input id="insert3" type="text" class="form-control" placeholder="domain" aria-label="Username" aria-describedby="basic-addon3">
                     </div>
                 </div>
@@ -65,7 +67,7 @@
             } 
 
             
-     function myBtn(){ 
+     function myBtn1(){ 
         let input1 = document.querySelector("#insert1").value
         proNoun.push(input1);
     }  
